# se-toolkit-lab-8

./: REPORT.md  docker-compose.override.yml  docker-compose.yml  docker-compose.yml.bak  pyproject.toml
backend/app/routers/: items.py
caddy/: Caddyfile
mcp/mcp_lms/: pyproject.toml
mcp/mcp_observability/: __main__.py  pyproject.toml  server.py
nanobot/: Dockerfile  REPORT.md  config.json  config.json.updated  entrypoint.py  pyproject.toml
nanobot/workspace/sessions/: cli_direct.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
