[project]
name = "lms-mcp"
version = "1.0.0"
description = "MCP server for LMS backend"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_lms"]
